--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<head><meta http-equiv="refresh" content="0; url=https://bennbolton.github.io/GrungeonsAndGroblins/-wiki/landing-page.htmlp"></head>
+<head><meta http-equiv="refresh" content="0; url=https://bennbolton.github.io/GrungeonsAndGroblins/-wiki/landing-page.html"></head>
